--- a/main/templates/addtool.html
+++ b/main/templates/addtool.html
@@ -60,7 +60,7 @@
             type: 'POST',
             data: {"tool_name": tool_name,"tool_content":tool_content},
             success: function(e){
-                var urls_re = '/toolslist/';
+                var urls_re = '/tool/';
                 if(e == "1"){
                     location.href= urls_re;
 
