--- a/main/templates/basemain.html
+++ b/main/templates/basemain.html
@@ -58,7 +58,7 @@
 						<b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
-	                <li><a href="/toollist/">Detection Tools List</a></li>
+	                <li><a href="/tool/">Detection Tools List</a></li>
 						<li><a href="/addtool/">Add Detection Tools</a></li>
 					</ul>
 			</li>
