--- a/main/templates/basemain.html
+++ b/main/templates/basemain.html
@@ -49,7 +49,7 @@
 				<ul class="dropdown-menu">
 	                <li><a href="/scan/">Scan Project</a></li>
 	                <li><a href="/poc_list/">Tools List</a></li>
-	                <li><a href="/results/">Scan results</a></li>
+	                <li><a href="/projects/">Scan results</a></li>
 				</ul>
 			</li>
             <li class="dropdown">
