--- a/main/templates/scan.html
+++ b/main/templates/scan.html
@@ -25,9 +25,9 @@
                   <option value="1" data="0" selected="slected">
                     Flawfinder
                   </option>
-                  <option value="0" data="1">
+<!--                   <option value="0" data="1">
                     Its4
-                  </option>
+                  </option> -->
                   <option value="2" data="2">
                     Tscancode
                   </option>
